# tflite-on-stm32-cortexm7

./: .gitignore  .gitmodules  LICENSE  README.md  example_quant.tflite  flake.nix  make_model.py  pyproject.toml  run_model.py  rust-toolchain.toml
model-lib/: CMakeLists.txt  arm-none-eabi-gcc.cmake  micro_time.cpp  model_data.h  tflm_model.cpp
rust-firmware/: Cargo.toml
rust-firmware/bootloader/: Cargo.toml  LICENSE  build.rs
rust-firmware/bootloader/.cargo/: config.toml
rust-firmware/bootloader/src/: main.rs
rust-firmware/firmware/: Cargo.toml  build.rs  definition.yaml  memory.x
rust-firmware/firmware/.cargo/: config.toml
rust-firmware/firmware/src/: main.rs
rust-firmware/flash-lib/: Cargo.toml
rust-firmware/flash-lib/.cargo/: config.toml
rust-firmware/flash-lib/src/: lib.rs
