[workspace]
resolver = "2"
members = ["flash-lib", "bootloader", "firmware"]

[workspace.dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features = ["rt", "stm32h7s3l8", "time-driver-tim2", "exti", "unstable-pac", "chrono"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = [] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["tick-hz-1_000_000"] }

defmt = { version = "1.0.1" }
defmt-rtt = "1.0.0"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core", "cm7"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", default-features = false }
assign-resources = "0.5.0"
critical-section = "1.1"
flash-algorithm = "0.4.0"
rtt-target = { version = "0.3", features = ["cortex-m"] }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 2
overflow-checks = true
